--- a/laxyam/padyam/purANam/nArAyaNIyam/003.md
+++ b/laxyam/padyam/purANam/nArAyaNIyam/003.md
@@ -23,8 +23,8 @@ title: ००३
 <div class="audioEmbed"  caption="सीतालक्ष्मी-वाचनम्" src="https://archive.org/download/nArAyaNIyam-shlokawise-audio/003/003_02.mp3"></div>
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-**गद-क्लिष्टं** कष्टं +++(किन्तु)+++ तव **चरण-सेवा-रसभरे**  
-**ऽप्यनासक्तं चित्तं भवति बत** विष्णो **कुरु दयाम्** ।  
+**गद-क्लिष्टं** कष्टं +++(किन्तु)+++ तव चरण-सेवा-रसभरे  
+ऽप्य् **अनासक्तं चित्तं भवति बत** विष्णो **कुरु दयाम्** ।  
 भवत्-पादाम्भोज-स्मरण-रसिको नाम-निवहान्  
 अहं गायं गायं कुहचन **विवत्स्यामि विजने** ॥ ३२॥
 </details>
